# FoodForThought

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  cmake-wrapper.py
cmake/: FindCatch2.cmake  Output.cmake
f4t/: CMakeLists.txt  f4t.cpp  f4t.h  framework.h
f4t/config/: compiler.h  platform.h
f4t/f4t_catch/: CMakeLists.txt
f4t/win32/: win32.cpp
src/: CMakeLists.txt
src/check/: CMakeLists.txt  Check.cpp  Check.h  Check_Console.cpp  Check_Console.h
src/f4t/: CMakeLists.txt  Element.cpp  Element.h  Exception.h  Problem.cpp  Problem.h  Util.h  View.h  Virtual_Buffer.h  f4t.h
test/: CMakeLists.txt
test/f4t_simple/: CMakeLists.txt  main.cpp
test/f4t_test/: CMakeLists.txt  main.cpp  view_test.cpp
